--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,10 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASS}
-    volumes:
-      - mongo-data:/data/db
+    ports:
+      - "27017:27017"
+#    volumes:
+#      - mongo-data:/data/db
     networks:
       - backend-network
 
@@ -21,28 +23,28 @@ services:
     ports:
       - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongo:27017/${MONGODB_DB}?authSource=admin
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongo:27017/?authSource=admin
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGODB_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGODB_PASS}
     networks:
       - backend-network
 
-  cv-backend:
-    image: cv-backend
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: always
-    depends_on:
-      - mongo
-    ports:
-      - "8080:8080"
-    environment:
-      MONGODB_URI: mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongo:27017/${MONGODB_DB}?authSource=admin
-      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
-      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
-    networks:
-      - backend-network
+#  cv-backend:
+#    image: cv-backend
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    restart: always
+#    depends_on:
+#      - mongo
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      MONGODB_URI: mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongo:27017/${MONGODB_DB}?authSource=admin
+#      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+#      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+#    networks:
+#      - backend-network
 
 networks:
   backend-network:
