feat: Docker & Slf4j
Changed Dockerfile to build .jar inside the container and added Slf4j support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=id
 
 spring.data.mongodb.uri=${MONGODB_URI}
+
+logging.level.root=WARN
+logging.file.name=cv-backend.log
+logging.logback.rollingpolicy.max-file-size=100MB
