feat(Users) :sparkles: Added user management
Added user management endpoints
/users
     /me
     /all
     /{email}
supporting get,post,put,delete methods and added corresponding service methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.security.oauth2.client.registration.google.clientId=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.clientSecret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile, email
 
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=id
+
+spring.data.mongodb.uri=${MONGODB_URI}
+
+logging.level.root=WARN
+logging.file.name=cv-backend.log
+logging.logback.rollingpolicy.max-file-size=100MB
