feat(Messages): :sparkles: Finished basic messaging feature

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,22 +29,22 @@ services:
     networks:
       - backend-network
 
-#  cv-backend:
-#    image: cv-backend
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    restart: always
-#    depends_on:
-#      - mongo
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      MONGODB_URI: mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongo:27017/${MONGODB_DB}?authSource=admin
-#      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
-#      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
-#    networks:
-#      - backend-network
+  cv-backend:
+    image: cv-backend
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - "8080:8080"
+    environment:
+      MONGODB_URI: mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongo:27017/${MONGODB_DB}?authSource=admin
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+    networks:
+      - backend-network
 
 networks:
   backend-network:
