Made changes to make backend hosted

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.security.oauth2.client.provider.google.user-name-attribute=id
 
 spring.data.mongodb.uri=${MONGODB_URI}
 
+server.servlet.context-path=/api
+
 logging.level.root=WARN
 logging.file.name=cv-backend.log
 logging.logback.rollingpolicy.max-file-size=100MB
