--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,13 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=id
 
+perspective.api.key=${PERSPECTIVE_API_KEY}
+
 spring.data.mongodb.uri=${MONGODB_URI}
 
 server.servlet.context-path=/api
+
+redirectUri=https://cv.bykowski.dev/login/success
 
 logging.level.root=WARN
 logging.file.name=cv-backend.log
