feature(Users): Added /pay, get /bannedUsers,

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.data.mongodb.uri=${MONGODB_URI}
 
 server.servlet.context-path=/api
 
-redirectUri=https://cv.bykowski.dev/dashboard?loginSuccess=true
+redirectUri="https://cv.bykowski.dev/dashboard?loginSuccess=true"
 
 logging.level.root=WARN
 logging.file.name=cv-backend.log
